yo ta sure final ho

--- a/major_project_report/sec/appendix.tex
+++ b/major_project_report/sec/appendix.tex
@@ -1,42 +1,41 @@
 % Appendix page
 \newpage
 \section*{APPENDIX A}
+
+{\bf Output Screenshots}
 \addcontentsline{toc}{section}{APPENDIX A}
 
-\begin{figure}[h]
+\begin{figure}[!ht]
   \centering
     \includegraphics[width=1\textwidth]{fig/home_screenshot.png}
-    \caption{Home Page Screen-shot.}
+    \caption{Home Page}
 \end{figure}
 
-\newpage
-\begin{figure}[h]
+\begin{figure}[!ht]
   \centering
     \includegraphics[width=1\textwidth]{fig/recommended_songs.png}
-    \caption{Recommended Songs Page.}
+    \caption{Recommended Songs Page}
 \end{figure}
 
-\newpage
-\begin{figure}[h]
+\begin{figure}[!ht]
   \centering
     \includegraphics[width=1\textwidth]{fig/profile_screenshot.png}
-    \caption{User Profile Page.}
+    \caption{User Profile Page}
 \end{figure}
 
-\newpage
-\begin{figure}[h]
+\begin{figure}[!ht]
   \centering
     \includegraphics[width=1\textwidth]{fig/help_screenshot.png}
-    \caption{Help Page.}
+    \caption{Help Page}
 \end{figure}
 
-\newpage
+\cleardoublepage
 \section*{APPENDIX B}
 \addcontentsline{toc}{section}{APPENDIX B}
 {\bf Stopwords used}\\
 
 
-{\em 'i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves', 'you', 'your', 'yours', 'yourself', 'yourselves', 'he', 'him', 'his', 'himself', 'she', 'her', 'hers', 'herself', 'it', 'its', 'itself', 'they', 'them', 'their', 'theirs', 'themselves', 'what', 'which', 'who', 'whom', 'this', 'that', 'these', 'those', 'am', 'is', 'are', 'was', 'were', 'be', 'been', 'being', 'have', 'has', 'had', 'having', 'do', 'does', 'did', 'doing', 'a', 'an', 'the', 'and', 'but', 'if', 'or', 'because', 'as', 'until', 'while', 'of', 'at', 'by', 'for', 'with', 'about', 'against', 'between', 'into', 'through', 'during', 'before', 'after', 'above', 'below', 'to', 'from', 'up', 'down', 'in', 'out', 'on', 'off', 'over', 'under', 'again', 'further', 'then', 'once', 'here', 'there', 'when', 'where', 'why', 'how', 'all', 'any', 'both', 'each', 'few', 'more', 'most', 'other', 'some', 'such', 'no', 'nor', 'not', 'only', 'own', 'same', 'so', 'than', 'too', 'very', 's', 't', 'can', 'will', 'just', 'don', 'should', 'now', 'd', 'll', 'm', 'o', 're', 've', 'y', 'ain', 'aren', 'couldn', 'didn', 'doesn', 'hadn', 'hasn', 'haven', 'isn', 'ma', 'mightn', 'mustn', 'needn', 'shan', 'shouldn', 'wasn', 'weren', 'won', 'wouldn'}\\
+'i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves', 'you', 'your', 'yours', 'yourself', 'yourselves', 'he', 'him', 'his', 'himself', 'she', 'her', 'hers', 'herself', 'it', 'its', 'itself', 'they', 'them', 'their', 'theirs', 'themselves', 'what', 'which', 'who', 'whom', 'this', 'that', 'these', 'those', 'am', 'is', 'are', 'was', 'were', 'be', 'been', 'being', 'have', 'has', 'had', 'having', 'do', 'does', 'did', 'doing', 'a', 'an', 'the', 'and', 'but', 'if', 'or', 'because', 'as', 'until', 'while', 'of', 'at', 'by', 'for', 'with', 'about', 'against', 'between', 'into', 'through', 'during', 'before', 'after', 'above', 'below', 'to', 'from', 'up', 'down', 'in', 'out', 'on', 'off', 'over', 'under', 'again', 'further', 'then', 'once', 'here', 'there', 'when', 'where', 'why', 'how', 'all', 'any', 'both', 'each', 'few', 'more', 'most', 'other', 'some', 'such', 'no', 'nor', 'not', 'only', 'own', 'same', 'so', 'than', 'too', 'very', 's', 't', 'can', 'will', 'just', 'don', 'should', 'now', 'd', 'll', 'm', 'o', 're', 've', 'y', 'ain', 'aren', 'couldn', 'didn', 'doesn', 'hadn', 'hasn', 'haven', 'isn', 'ma', 'mightn', 'mustn', 'needn', 'shan', 'shouldn', 'wasn', 'weren', 'won', 'wouldn'\\
 
 
 {\bf POS tags used}\\
@@ -79,8 +78,8 @@ heartiest highest largest least less most nearest second tightest worst
 % \cleardoublepage
 % \section*{APPENDIX C}
 % \addcontentsline{toc}{section}{APPENDIX }
-% \begin{figure}[h]
+% \begin{figure}[!htbp]
 %   \centering
-%     \includegraphics[width=1\textwidth]{fig/aschedule.png}
+%     \includegraphics[0.idth=1\textwidth]{fig/aschedule.png}
 %     \caption{PERT Diagram of Project}
 % \end{figure}
