--- a/major_project_report/sec/copyright.tex
+++ b/major_project_report/sec/copyright.tex
@@ -13,7 +13,8 @@ Campus and authors' written permission is strictly prohibited.
 Request for permission to copy or to make any other use of the material in this report in whole or in part should be 
 addressed to:
 
+Head\\
 Department of Electronic and Computer Engineering,\\
 Institute of Engineering, Pulchowk Campus, \\ 
-Tribhuvan University, Nepal 
+Lalitpur, Nepal 
 
