--- a/major_project_report/sec/letter_of_approval.tex
+++ b/major_project_report/sec/letter_of_approval.tex
@@ -1,52 +1,77 @@
 
 \newpage
-\section*{LETTER OF APPROVAL}
+% \section*{LETTER OF APPROVAL}
 \addcontentsline{toc}{section}{LETTER OF APPROVAL}
 \setcounter{page}{2}
-The undersigned hereby certify that they have read and recommended to the Institute of Engineering for acceptance, this project
-report entitled "News Information Extraction and Visualization" submitted by Abhishek Paudel, Brihat Ratna Bajracharya, Miran Ghimire and Nabin Bhattarai in partial fulfillment of the requirement for the Bachelor's Degree in Computer Engineering.
 
-\vfill
+\begin{center}
+  TRIBHUVAN UNIVERSITY\\
+  INSTITUTE OF ENGINEERING\\
+  PULCHOWK CAMPUS\\
+  DEPARTMENT OF ELECTRONICS AND COMPUTER ENGINEERING\\
+\end{center}
+The undersigned certify that they have read, and recommended to the Institute of Engineering for acceptance, a project report entitled "Personality Based Music Recommendation System" submitted by Abhishek Paudel, Brihat Ratna Bajracharya, Miran Ghimire and Nabin Bhattarai in partial fulfillment of the requirements for the Bachelor's Degree in Computer Engineering.\\[1.1cm]
+
 \begin{minipage}{.60\textwidth}
 \rule{1\textwidth}{1pt}\\
-Supervisor \\
-Mr. Daya Sagar Baral \\
-{Department of Electronics \& Computer Engineering,} \\
-Institute of Engineering, Pulchowk Campus, \\
-Tribhuvan University, Nepal
+Supervisor, Mr. Daya Sagar Baral \\
+Lecturer\\
+Department of Electronics \& Computer Engineering\\[1.1cm]
 \end{minipage}
 
-\vfill
-\begin{minipage}{.5\textwidth}
-\rule{.66\textwidth}{0.8pt} \\
-Internal Examiner \\
-................................................. \\
-.................................................
-\end{minipage}
-\begin{minipage}{.5\textwidth}
-\rule{.66\textwidth}{0.8pt} \\
-External Examiner \\
-................................................. \\
-.................................................
-\end{minipage}
-\vfill
-\begin{minipage}{.53\textwidth}
-\rule{.6\textwidth}{0.8pt}\\
-Dr. Nanda Bikram Adhikari \\
-Deputy Head  \\
-    {\small Department of Electronics \& Computer Engineering,} \\
-Institute of Engineering, Pulchowk Campus \\
-Tribhuvan University, Nepal \\
-\end{minipage}
-\begin{minipage}{.53\textwidth}
-\rule{.6\textwidth}{0.8pt}\\
-Dr. Dibakar Raj Pant \\
-Head  \\
-    {\small Department of Electronics \& Computer Engineering,} \\
-Institute of Engineering, Pulchowk Campus \\
-Tribhuvan University, Nepal \\
+\begin{minipage}{.60\textwidth}
+\rule{1\textwidth}{1pt}\\
+Internal Examiner, Name
+Title\\
+Name of organization\\[1.1cm]
 \end{minipage}
 
-\vfill
-DATE OF APPROVAL:
+\begin{minipage}{.60\textwidth}
+\rule{1\textwidth}{1pt}\\
+External Examiner, Name
+Title\\
+Name of organization\\[1.1cm]
+\end{minipage}
+
+\begin{minipage}{.60\textwidth}
+\rule{1\textwidth}{1pt}\\
+Coordinator, Name\\
+Title\\
+Name of coordinating committee\\[1cm]
+\end{minipage}
+
+
+{\bf DATE OF APPROVAL:}
+
+% \vfill
+% \begin{minipage}{.5\textwidth}
+% \rule{.66\textwidth}{0.8pt} \\
+% Internal Examiner \\
+% ................................................. \\
+% .................................................
+% \end{minipage}
+% \begin{minipage}{.5\textwidth}
+% \rule{.66\textwidth}{0.8pt} \\
+% External Examiner \\
+% ................................................. \\
+% .................................................
+% \end{minipage}
+% \vfill
+% \begin{minipage}{.53\textwidth}
+% \rule{.6\textwidth}{0.8pt}\\
+% Mrs. Bibha Sthapit \\
+% Deputy Head  \\
+%     {\small Department of Electronics \& Computer Engineering,} \\
+% Institute of Engineering, Pulchowk Campus \\
+% Tribhuvan University, Nepal \\
+% \end{minipage}
+% \begin{minipage}{.53\textwidth}
+% \rule{.6\textwidth}{0.8pt}\\
+% Dr. Dibakar Raj Pant \\
+% Head  \\
+%     {\small Department of Electronics \& Computer Engineering,} \\
+% Institute of Engineering, Pulchowk Campus \\
+% Tribhuvan University, Nepal \\
+% \end{minipage}
+
 \vfill
