--- a/major_project_report/sec/limitations.tex
+++ b/major_project_report/sec/limitations.tex
@@ -1,4 +1,4 @@
-\newpage
+\cleardoublepage
 \section{LIMITATIONS AND FUTURE ENHANCEMENTS}
 In the context of building classification model, the preprocessing of the status updates was a huge challenge. The status updates of users can contain various emojis which could be significant but ignored. 
 
