--- a/major_project_report/sec/methodology.tex
+++ b/major_project_report/sec/methodology.tex
@@ -22,7 +22,7 @@ The non-functional requirement of the system can be summarized as follows:
 \end{itemize}
 \subsection{Feasibility Assessment}
 Feasibility Assessment is done to analyze the viability of an idea. In case of software development, it performs the practicality of the project or system. The result from feasibility assessment determines whether the project should go ahead, be redesigned, or dropped. There are
-five areas of feasibility - Technical, Economic, Legal, Operational ans Scheduling.
+five areas of feasibility - Technical, Economic, Legal, Operational and Scheduling.
 
 \subsubsection{Operational Feasibility}
 
@@ -50,7 +50,7 @@ The developed system, being huge and dynamic nature, may not be developed effici
 \begin{figure}[!ht]
 \centering
 \includegraphics[width = 5 cm]{fig/scrum-chart.jpg}
-\caption{scrum software development cycle}
+\caption{Scrum Software Development Cycle}
 \label{fig:scrum}
 \end{figure}
 Scrum is an agile way to manage project. Agile software development with Scrum is often perceived as a methodology, but rather than viewing Scrum as methodology, it is often thought as a framework for managing a process. In the agile Scrum world, instead of providing complete, detailed descriptions of how everything is to be done on a project,much of it is left up to Scrum software development team. This is because the team will know best how to solve the problem they are presented. It relies on a self-organizing, cross-functional team. The scrum team is self-organizing in that there is no overall team leader who decides which person will do which task or how a problem will be solved. This is the issue that are decided by the team as a whole. Besides the team is cross functional, because of which everyone is needed to take a feature from idea to implementation.
