--- a/major_project_report/sec/system_design.tex
+++ b/major_project_report/sec/system_design.tex
@@ -10,7 +10,7 @@ The give figure below is the architectural diagram of the project showing the pr
 \begin{figure}[!ht]
 \centering
 \includegraphics[width = 16 cm]{fig/system.png}
-\caption{block diagram of the system}
+\caption{Block Diagram of the System}
 \label{fig:project}
 \end{figure}
 
@@ -70,7 +70,7 @@ From the above diagram, it is clear that the system consists of four actors.They
 The  ER diagram depicting the entities used in the system and relationship between them is given below:
 \begin{figure}[!ht]
 \centering
-\includegraphics[width = 15 cm]{fig/er.png}
+\includegraphics[width = 10 cm]{fig/er.png}
 \caption{ER diagram of the System}
 \label{fig:er}
 \end{figure}
