--- a/major_project_report/sec/titlepage.tex
+++ b/major_project_report/sec/titlepage.tex
@@ -30,13 +30,13 @@
 
   A PROJECT WAS SUBMITTED TO THE DEPARTMENT OF ELECTRONICS AND COMPUTER
   ENGINEERING IN PARTIAL FULFILLMENT OF THE REQUIREMENT FOR THE BACHELOR'S
-  DEGREE IN ELECTRONICS \& COMMUNICATION / COMPUTER ENGINEERING\\[1.5cm]
+  DEGREE IN COMPUTER ENGINEERING\\[1.5cm]
   % ~
 
   DEPARTMENT OF ELECTRONICS AND COMPUTER ENGINEERING\\
-  LALITPUR, NEPAL
+  LALITPUR, NEPAL\\[3.5cm]
 
-  \vfill
+
   AUGUST 1, 2017
 
 }
