--- a/major_project_report/sec/conclusion.tex
+++ b/major_project_report/sec/conclusion.tex
@@ -1,3 +1,3 @@
 \newpage
 \section{CONCLUSION}
-In this project, we have developed classification models that take Facebook user's status as input and classifies their personality based on big five personality traits. This information is used by user to user collaborative filtering to find out similar users and recommend music to them. This recommendation model performs better than the user to user collaborative collaborative filtering with rating matrix but not as good as the matrix factorization. Besides the recommendation model developed with personality has comparable result to weighted average of similarity using rating matrix and personality matrix. Hence, with reference to current scenario of our project, we can conclude that personality,i.e big five traits of the user can be used to inhance existing user to user collaborative filtering that computes the similarity with the user rating matrix.
+In this project, we have developed classification models that take Facebook user's status as input and classifies their personality based on big five personality traits. This information is used by user to user collaborative filtering to find out similar users and recommend music to them. This recommendation model performs better than the user to user collaborative collaborative filtering with rating matrix but not as good as the matrix factorization. Besides the recommendation model developed with personality has comparable result to weighted average of similarity using rating matrix and personality matrix. Hence, with reference to current scenario of our project, we can conclude that personality,i.e big five traits of the user can be used to enhance existing user to user collaborative filtering that computes the similarity with the user rating matrix.
