--- a/major_project_report/sec/limitations.tex
+++ b/major_project_report/sec/limitations.tex
@@ -2,6 +2,6 @@
 \section{LIMITATIONS AND FUTURE ENHANCEMENTS}
 In the context of building classification model, the preprocessing of the status updates was a huge challenge. The status updates of users can contain various emojis which could be significant but ignored. 
 
-The current recommendation system as a whole suffers from cold start in case of item i.e. item ramp up problem. In case of user to user collaborative filtering with rating matrix, it suffers from stability vs plasticity issue. Besides, in case of collaborative engine, gray sheep problem still prevails with the use of the personality too.
+The current recommendation system as a whole suffers from cold start in case of item i.e. item ramp up problem. In case of user to user collaborative filtering with rating matrix, it suffers from stability vs plasticity issue. Besides, in case of collaborative engine, gray sheep problem still prevails with the use of the personality too because of sparsity in the user rating matrix.
 
 The current system can be enhanced with the consideration of emojis and some demographic information about the users in case of personality classification. The ramp-up problem in case of recommendation engine can be solved with the content filtering method in order to create a profile of an item. Besides stability vs plasticity issue can be solved by giving low weights to the old rating of the users in case of user to user collaborative filtering with rating matrix.
